# chat-ai-agent-hybrid-rag

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: config.py  main.py
app/agent/: agent.py  context_var.py  mcp_tools.py  prompts.py  tools.py
app/attachments/: image_processor.py  office_processor.py  pdf_processor.py  validators.py
app/models/: chat.py  metrics.py
app/retrieval/: context.py
app/routers/: chat.py  ingest.py  metrics.py  skills.py
scripts/: 00_schema.sql  ingest_docs.py  migration_add_file_size.sql  migration_add_metrics.sql  migration_chat_sessions.sql  migration_pdf_image_support.sql  migration_session_files.sql  migration_session_output_files.sql  migration_skills.sql  migration_update_skill_descriptions.sql
skill-cds-documentation/: cds-doc-analysis.md  cds-structural-analysis.md
web/: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  components.json  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.tsx
web/src/components/chat/: assistant-message.tsx  chat-input.tsx  message-list.tsx  sources-panel.tsx  thinking-panel.tsx  tool-badge.tsx  user-message.tsx
web/src/components/home/: home-input.tsx  suggestion-chips.tsx
web/src/components/layout/: nav-sidebar.tsx
web/src/hooks/: use-chat.ts  use-sessions.ts
web/src/lib/: api.ts  download.ts  prefs.ts  sessions.ts  types.ts
web/src/pages/: analytics-page.tsx  chat-page.tsx  chats-page.tsx  home-page.tsx  skills-page.tsx
(+1 files in other folders)
